<resources>
    <string name="app_name">ICCCA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_newactivity1">newactivity1</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="home_text">\t \tThe evolution of computing and Communications Technologies and their reliability in the different areas of the industry has changed completely the design of automated systems. Computing covers application of Computer Science to the mathematical modeling of complex systems in the field of Engineering and Sciences. Computing is interdisciplinary and application oriented, focusing on techniques and tools that enable computational simulations to be performed.\n \tThe vision today is to best utilize the media of communication. Communication processes are fundamental part of virtually every aspect of human computer interaction (HCI). Research on HCI or data communication takes you to the cutting-edge of research and theory in all areas with in the field of communication like exploration of communication processes, antecedents and consequences of communication in a broad range of network communication.\n"</string>
    <string name="contect_us">\n <b>Dr. Parma Nand Astya</b> \n \n Professor and Dean. \n Plot no 2, Sector 17A, \n Yamuna Expressway\n  Greater Noida,Uttar Pradesh  Pin-201308, INDIA  Tel: +91120-4806897
        Mob: +91 9810446717</string>
    <string name="add">
        School of Computing Science and Engineering
Galgotias University, Plot no 2 Sector 17A,
Yamuna Expressway, Greater Noida, UP (INDIA) PIN-201308
www.galgotiasuniversity.edu.in , Phone: +91-120-4806897
</string>
    <string name="title1">Talk Title: "Communication Architectures and Systems for Smart Cities"</string>
    <string name="datat1">New advances in information and communication technologies allow cities to be efficient and smarter. Smart cities benefit the population through the offered services and applications. In order to gather the information, it is required a considerable amount of sensors connected through a sensor network. In this talk, we will review last advances in low cost sensors and sensor networks for Smart Cities. Moreover, we will show the communication architectures and protocols developed for Smart Cities. We will also review the most well-known artificial intelligence techniques for Smart cities. Finally, we will finish the talk showing some real applications. </string>
    <string name="name1">Prof. Jaime Lloret \nAssociate Professor, Polytechnic University of Valencia</string>
    <string name="data1">Prof.Jaime Lloret(jlloret@dcom.upv.es) received his M.Sc. in Physics in 1997, his M.Sc. in electronic Engineering in 2003 and his Ph.D. in telecommunication engineering (Dr.Ing.) in 2006.He is a Cisco Certified Network Professional Instructor. He worked as a network designer and administrator in several enterprises. He is currently Associate Professor in the Polytechnic University of Valencia. He is the Chair of the Integrated Management Coastal Research Institute (IGIC) and he is the head of the "Active and collaborative techniques and use of technologic resources in the education (EITACURTE)" Innovation Group. He is the director of the University Diploma “Redes y Comunicaciones de Ordenadores” and of the University Master "Digital Post Production". He has been Internet Technical Committee chair (IEEE Communications Society and Internet society) for the term 2013-2015.He has authored 22 book chapters and has more than 380 research papers published in national and international conferences, international journals (more than 140 with ISI ThomsonJCR). He has been the co-editor of 40 conference proceedings and guest editor of several international books and journals. He is editor-in-chief of the “Ad Hoc and Sensor Wireless Networks” (with ISI Thomson Impact Factor), the international journal "Networks Protocols and Algorithms",and the International Journal of Multimedia Communications, IARIA Journals Board Chair (8 Journals) and he is (or has been) associate editor of 46 international journals (16 of them with ISI Thomson Impact Factor). He has been involved in more than 400 Program committees of international conferences, and more than 150organization and steering committees. He leads many national and international projects. He is currently the chair of the Working Group of the Standard IEEE 1907.1. </string>
    <string name="title2">Talk Title: "Automation in Health Monitoring"</string>
    <string name="datat2">There is an astonishing increase in people with chronic diseases globally over the past decade. Every year, the healthcare cost of managing chronic diseases such as diabetes and Alzheimer Disease in North America, is estimated to be several billions. Similar to the global scenario, in Canada, there is an increase in elderly population and a heavy burden on healthcare cost. But there is also growing evidence that Information and Communication Technologies (ICT) can reduce healthcare cost and improve the patient care and the quality of life for people with chronic diseases. Loss of autonomy as people age presses the need for modern health monitoring technologies and ICT to support assisted living in their own home, so as to avoid expensive in-hospital care. Intelligent health monitoring systems have been able to provide any-time-any-where patient to physician Communication, remote emergency care, quick response and diagnosis, and secure medical data communication addressing privacy concerns and all issues related to the medical history of a patient. Current research is focused on producing proactive and preventive healthcare solutions to control healthcare cost. Tools that support automated flow of information from hospital to the patient side and vice versa are in-demand for intelligent health monitoring. Computing paradigms such as pervasive computing, ubiquitous computing, body area networks, wireless sensor networks, internet of things, cloud computing and artificial intelligence techniques play an important role in making these systems talk/communicate with one another under harsh conditions. While developing and implementing these automated health monitoring systems, challenges arise in data collection, assessing and analyzing in real-time and creating immediate reactive and visualization solutions based on the intelligence gathered from the data. In this talk, some of the research contributions made to address these challenges for automation and their solutions will be presented. </string>
    <string name="name2">Dr. Janet Light\nProfessor, Dept. of Computer Science University of New Brunswick, Canada</string>
    <string name="data2"></string>
    <string name="title4">Talk Title: ""</string>
    <string name="datat4">""</string>
    <string name="name4">Prof. SnehAnand\nIITD </string>
    <string name="title8">  </string>
    <string name="datat8">  </string>
    <string name="name8">Prof. P.K.Garg (Chief Guest)\nVice Chancellor , UTU Dehradun </string>
    <string name="data8">Prof. P.K. Garg, is currently serving as Vice Chancellor, Uttarakhand Technical University, Dehradun. He completed B.Tech (Civil Engg.) in 1980 and M.Tech (Civil Engg) in 1982 both from the University of Roorkee (now IIT Roorkee). He is a recipient of Gold Medal at IIT Roorkee to stand first during M.Tech programme, Commonwealth Scholarship Award for doing Ph.D. from University of Bristol (UK), and Commonwealth Fellowship Award to carry out post-doctoral research work at University of Reading (UK). He joined the Department of Civil Engg at IIT Roorkee in 1982, and gradually advancing his career rose to the position of Head of the Department in 2015. Dr Garg has shown extra-ordinary capabilities academically and administratively at various positions at IIT Roorkee. Prof. Garg has published more than 290 technical papers in national and international conferences and journals. He has undertaken 23 research projects and provided technical services to 83 consultancy projects on various aspects of Civil Engineering, generating funds for the Institute. He has authored a text book on Remote Sensing, and produced two technical films on Story of Mapping. He has developed several new courses and practical exercises in Geomatics Engineering. Besides, supervising a large number of undergraduate projects, he has guided about 70 M.Tech and 17 Ph.D. Thesis. He is instrumental in prestigious MHRD funded projects on e-learning; Development of Virtual Labs, Pedagogy and courses under NPTEL. He has served as experts on various national committees, including Ministry of Environment and Forest, EAEC Committee, NBA (AICTE) and Project Evaluation Committee, DST, New Delhi.</string>
    <string name="title3">Multi-objective Modelling and Optimization of Scientific and industrial application on Distributed computing infrastructures</string>
    <string name="datat3">The presentation is structured in four parts. It starts with an overview of the current research conducted by the applicant at the University of Innsbruck in the field of distributed and parallel systems. The second part introduces the ASKALON environment, the main research product of the applicant, designed to simplify and support the development cycle of scientific applications on distributed computing infrastructures. Afterwards, it presents a selection of the latest research methods and results obtained in two important areas: modelling, prediction and simulation of energy consumption and multi-objective optimization and scheduling of scientific applications on distributed computed infrastructures with respect to time, cost, energy, robustness and storage as simultaneous conflicting objectives. The third part of the talk presents the research conducted by the applicant in the area of industrial applications, with focus on massively multiplayer online gaming on distributed computing resources. The talk concludes with an outlook into the future research plans. </string>
    <string name="name3">Prof. Radu Prodan\nUniversity of Innsbruck, Austria</string>
    <string name="data3">Dr. Radu Prodan is Associate Professor in the Distributed and Parallel Systems group at the University of Innsbruck, Austria. He has over 20 years of research experience in the parallel and distributed computing areas. He earned his Ph.D. in 2004 from the Vienna University of Technology and his Habilitation degree in 2009 from the University of Innsbruck. Prof. Prodan has been involved in numerous national and international projects, including two Austrian-Indian cooperation project with Prof. Shajulin Benedict from St.Xaviers Catholic College of Engineering, Chunkankadai, Nagercoil and Prof. Neeraj Kumar from Thapar Institute of Engineering and Technology University, Patiala. Prof. Prodan authored over 150 conference and journal publications (including one IEEE best paper award) and one book in the areas of parallel and distributed computing. The IEEE Transactions on Cloud Computing journal ranked him recently as the 11th most productive researcher worldwide in the area of Cloud computing. </string>
</resources>